--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/activity_entry.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/activity_entry.xml
@@ -4,23 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient"
-    android:orientation="horizontal"
     android:gravity="center_vertical"
+    android:orientation="horizontal"
     tools:context=".views.activities.EntryActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginBottom="10dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_margin="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:text="@string/welcome"
             android:textColor="@color/colorBackground"
             android:textSize="30sp"
@@ -39,7 +39,6 @@
     <FrameLayout
         android:id="@+id/login_or_register_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
+        android:layout_height="match_parent"></FrameLayout>
 
 </LinearLayout>
