--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/fragment_pet.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout-land/fragment_pet.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <ScrollView
         android:id="@+id/pet_logs_scroll"
         android:layout_width="200dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
         android:layout_height="match_parent"
-        android:background="@color/colorWhite">
+        android:background="@color/colorWhite"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp">
 
         <android.support.v7.widget.LinearLayoutCompat
             android:id="@+id/pet_logs_container_layout"
@@ -29,10 +28,10 @@
 
         <LinearLayout
             android:id="@+id/layout_container_game_bars"
-            android:layout_alignParentTop="true"
-            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <!-- https://github.com/akexorcist/Android-RoundCornerProgressBar?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1375#usage -->
@@ -41,87 +40,90 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                app:rcProgress="50"
-                app:rcMax="100"
-                app:rcRadius="14dp"
-                app:rcBackgroundPadding="2dp"
-                app:rcReverse="false"
-                app:rcProgressColor="@color/colorRed"
-                app:rcSecondaryProgressColor="@color/colorPrimary"
                 app:rcBackgroundColor="@color/colorSoftDark"
-                app:rcIconSrc="@drawable/ic_food_icon"
-                app:rcIconSize="20dp"
+                app:rcBackgroundPadding="2dp"
+                app:rcIconBackgroundColor="@color/colorDarkRed"
                 app:rcIconPadding="3dp"
-                app:rcIconBackgroundColor="@color/colorDarkRed" />
+                app:rcIconSize="20dp"
+                app:rcIconSrc="@drawable/ic_food_icon"
+                app:rcMax="100"
+                app:rcProgress="50"
+                app:rcProgressColor="@color/colorRed"
+                app:rcRadius="14dp"
+                app:rcReverse="false"
+                app:rcSecondaryProgressColor="@color/colorPrimary" />
 
             <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
                 android:id="@+id/pet_rest_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                app:rcProgress="50"
-                app:rcMax="100"
-                app:rcRadius="14dp"
-                app:rcBackgroundPadding="2dp"
-                app:rcReverse="false"
-                app:rcProgressColor="@color/colorYellow"
-                app:rcSecondaryProgressColor="@color/colorPrimary"
                 app:rcBackgroundColor="@color/colorSoftDark"
-                app:rcIconSrc="@drawable/ic_timer_black_24dp"
-                app:rcIconSize="20dp"
+                app:rcBackgroundPadding="2dp"
+                app:rcIconBackgroundColor="@color/colorDarkYellow"
                 app:rcIconPadding="3dp"
-                app:rcIconBackgroundColor="@color/colorDarkYellow" />
+                app:rcIconSize="20dp"
+                app:rcIconSrc="@drawable/ic_timer_black_24dp"
+                app:rcMax="100"
+                app:rcProgress="50"
+                app:rcProgressColor="@color/colorYellow"
+                app:rcRadius="14dp"
+                app:rcReverse="false"
+                app:rcSecondaryProgressColor="@color/colorPrimary" />
 
             <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
                 android:id="@+id/pet_fun_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                app:rcProgress="50"
-                app:rcMax="100"
-                app:rcRadius="14dp"
-                app:rcBackgroundPadding="2dp"
-                app:rcReverse="false"
-                app:rcProgressColor="@color/colorBlue"
-                app:rcSecondaryProgressColor="@color/colorPrimary"
                 app:rcBackgroundColor="@color/colorSoftDark"
-                app:rcIconSrc="@drawable/ic_fun_icon"
-                app:rcIconSize="20dp"
+                app:rcBackgroundPadding="2dp"
+                app:rcIconBackgroundColor="@color/colorDarkBlue"
                 app:rcIconPadding="3dp"
-                app:rcIconBackgroundColor="@color/colorDarkBlue" />
+                app:rcIconSize="20dp"
+                app:rcIconSrc="@drawable/ic_fun_icon"
+                app:rcMax="100"
+                app:rcProgress="50"
+                app:rcProgressColor="@color/colorBlue"
+                app:rcRadius="14dp"
+                app:rcReverse="false"
+                app:rcSecondaryProgressColor="@color/colorPrimary" />
 
         </LinearLayout>
 
         <ImageView
-            android:layout_margin="10dp"
+            android:id="@+id/state_image_pet"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/img_descriptor"
             android:layout_below="@id/layout_container_game_bars"
+            android:layout_margin="10dp"
             android:layout_toStartOf="@id/action_buttons_pet"
-            android:src="@drawable/app_logo"
-            android:id="@+id/state_image_pet"/>
+            android:contentDescription="@string/img_descriptor"
+            android:src="@drawable/app_logo" />
 
         <LinearLayout
-            android:layout_below="@id/layout_container_game_bars"
             android:id="@+id/action_buttons_pet"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
             android:layout_alignParentEnd="true"
+            android:layout_below="@id/layout_container_game_bars"
+            android:layout_margin="20dp"
             android:orientation="vertical">
+
             <Button
                 android:id="@+id/pet_action_eat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Eat" />
+
             <Button
                 android:id="@+id/pet_action_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Play" />
+
             <Button
                 android:id="@+id/pet_action_sleep"
                 android:layout_width="wrap_content"
