--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/activity_store.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    tools:context=".views.activities.StoreActivity">
+    tools:context=".views.activities.StoreActivity"
+    tools:openDrawer="start">
 
     <include
         layout="@layout/app_bar_store"
