--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/fragment_register.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/fragment_register.xml
@@ -8,49 +8,49 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="70dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
 
         <EditText
             android:id="@+id/register_input_name"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorHint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/request_user_name"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorHint" />
 
         <EditText
             android:id="@+id/register_input_email"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorHint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/request_email"
             android:inputType="textEmailAddress"
+            android:nextFocusDown="@id/login_input_password"
             android:nextFocusForward="@id/login_input_password"
-            android:nextFocusDown="@id/login_input_password"/>
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorHint" />
 
         <EditText
             android:id="@+id/register_input_password"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorHint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/request_password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorHint" />
 
 
         <Button
             android:id="@+id/register_create_account"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_register"/>
+            android:layout_marginTop="10dp"
+            android:text="@string/button_register" />
     </LinearLayout>
 
 </FrameLayout>
