--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/item_store_single_animal.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/item_store_single_animal.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <ImageView
-        android:contentDescription="@string/img_decriptor_store_animal"
         android:id="@+id/store_single_animal_image_idle"
-        android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="60pt"
-        android:src="@drawable/ic_pets_black_24dp"/>
+        android:layout_weight="2"
+        android:contentDescription="@string/img_decriptor_store_animal"
+        android:src="@drawable/ic_pets_black_24dp" />
 
     <LinearLayout
-        android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="3"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/store_single_animal_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textSize="30sp"/>
+            android:textSize="30sp" />
+
         <TextView
             android:id="@+id/store_single_animal_descriptor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/loremitsum"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
