--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/test.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/test.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:layout_height="wrap_content"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_height="wrap_content" />
