--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/dashboard.component.html
@@ -7,3 +7,4 @@
     <app-animal-card *ngFor="let animal of animalsData" [animalCard]="animal"></app-animal-card>
   </div>
 </div>
+{{animalsData2}} a
