--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/content_store.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/layout/content_store.xml
@@ -30,6 +30,15 @@
         android:textSize="15sp"
         android:textStyle="italic" />
 
+
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/no_data_available" />
+
+
     <!-- A RecyclerView with some commonly used attributes -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
