--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
@@ -13,15 +13,15 @@
         Downloads:</b>
     </div>
     <div>
-      {{numberDownloads}}
+      {{animalCard.TimesDownloaded}}
     </div>
     <div>
       <b>
-        Creator:
+        Creator: 
       </b>
     </div>
     <div>
-      {{creatorName}}
+      {{animalCard.CreatorName}}
     </div>
   </mat-card-content>
     <div class="text-center">
