--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/src/app/board/animal-card/animal-card.component.html
@@ -17,11 +17,11 @@
     </div>
     <div>
       <b>
-        Creator: 
+        Description: 
       </b>
     </div>
     <div>
-      {{animalCard.CreatorName}}
+      {{animalCard.Description}}
     </div>
   </mat-card-content>
     <div class="text-center">
